[workspace]
resolver = "2"

members = [
	"client/rpc",
	"primitives/io",
	"primitives/rpc",
]

[workspace.dependencies]
base64 = "0.21.2"
cosmrs = "0.14.0"
jsonrpsee = "0.16.2"
primitive-types = "0.12.1"
ripemd = { version = "0.1.3", default-features = false }

sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

hp-rpc = { version = "0.1.0", path = "primitives/rpc" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

lto = "fat"
codegen-units = 1
