[workspace]
resolver = "2"
members = [
	"client/rpc",
	"frame/cosmos",
	"primitives/cosmos",
	"primitives/io",
	"primitives/rpc"
]

[workspace.dependencies]
base64 = "0.21.2"
bech32 = { version = "0.9.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false }
cosmrs = "0.14.0"
futures = "0.3.25"
hex = { version = "0.4.3" }
jsonrpsee = "0.16.2"
k256 = { version = "0.13.1", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
scale-info = { version = "2.3.0", default-features = false }
serde = { version = "1.0.0", default-features = false }
serde_json = { version = "1.0.94", default-features = false }
signature = { version = "2.1.0", default-features = false }
tendermint = "0.32.0"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", default-features = false }
fp-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", default-features = false }

hp-cosmos = { version = "0.1.0", path = "primitives/cosmos", default-features = false }
hp-crypto = { version = "0.1.0", path = "primitives/crypto", default-features = false }
hp-io = { version = "0.1.0", path = "primitives/io", default-features = false }
hp-rpc = { version = "0.1.0", path = "primitives/rpc", default-features = false }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
