[package]
name = "hc-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noir-protocol/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmrs = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
fc-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
hp-cosmos = { workspace = true }
hp-rpc = { workspace = true, features = ["default"] }
tendermint = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
