[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "composable-support"
rust-version = "1.56"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.2.0", package = "parity-scale-codec", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.3.0", default-features = false, features = [
	"derive",
] }
num-traits = { version = "0.2.14", default-features = false }
schemars = { optional = true, default-features = false, workspace = true }

frame-support = { default-features = false, workspace = true }
sp-arithmetic = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"frame-support/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
	"schemars/std",
]
