[package]
edition = "2021"
name = "ibc-primitives"
version = "0.1.0"
authors = ["David Salami <wizdave97@gmail.com>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

ibc = { workspace = true, default-features = false }
codec = { version = "3.2.0", package = "parity-scale-codec", default-features = false }

[features]
default = ['std']
std = [
	"sp-runtime/std",
	"scale-info/std",
	"ibc/std",
	"codec/std",
]
mocks = []
runtime-benchmarks = []
