[package]
name = "pallet-cosmos-accounts"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

hp-crypto = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"hp-crypto/std",
]
try-runtime = []