[package]
name = "pallet-cosmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Horizon
hp-io = { workspace = true }

pallet-cosmos-types = { workspace = true, features = ["with-codec"] }
pallet-cosmos-x-auth-signing = { workspace = true }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-io/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
]
