[package]
name = "pallet-cosmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Horizon
hp-io = { workspace = true, default-features = false }

pallet-cosmos-types = { workspace = true, default-features = false, features = [
	"with-codec",
] }
pallet-cosmos-x-auth-signing = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-io/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
]
try-runtime = []
