[package]
name = "pallet-cosmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false, features = [
	"cosmwasm",
] }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

# Horizon
hp-io = { workspace = true, default-features = false }
pallet-cosmos-types = { workspace = true, default-features = false }
pallet-cosmos-x-auth-signing = { workspace = true, default-features = false }

[dev-dependencies]
base64ct = { workspace = true, default-features = false }
bech32 = { workspace = true, default-features = false }

fp-self-contained = { workspace = true, default-features = false, features = [
	"serde",
] }

hp-account = { workspace = true, default-features = false }
hp-crypto = { workspace = true, default-features = false }

pallet-assets = { workspace = true, default-features = false }
pallet-cosmos = { workspace = true, default-features = false }
pallet-cosmos-accounts = { workspace = true, default-features = false }
pallet-cosmwasm = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-cosmos-x-auth = { workspace = true, default-features = false }
pallet-cosmos-x-bank = { workspace = true, default-features = false }
pallet-cosmos-x-bank-types = { workspace = true, default-features = false }
pallet-cosmos-x-wasm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"cosmos-sdk-proto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"hp-io/std",
	"pallet-cosmos-x-auth-signing/std",
	"pallet-cosmos-types/std",
	"base64ct/std",
	"bech32/std",
	"fp-self-contained/std",
	"hp-account/std",
	"hp-crypto/std",
	"pallet-assets/std",
	"pallet-cosmos/std",
	"pallet-cosmos-accounts/std",
	"pallet-cosmwasm/std",
	"pallet-timestamp/std",
	"pallet-cosmos-x-auth/std",
	"pallet-cosmos-x-bank/std",
	"pallet-cosmos-x-bank-types/std",
	"pallet-cosmos-x-wasm/std",
]
try-runtime = []
