[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "pallet-cosmwasm"
version = "1.0.0"

[lib]
doctest = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false }
composable-support = { path = "../composable-support", default-features = false }
cosmwasm-vm = { workspace = true, default-features = false }
cosmwasm-vm-wasmi = { workspace = true, default-features = false }
cosmwasm-std = { workspace = true, default-features = false, features = [
	"iterator",
	"stargate",
	"cosmwasm_1_4",
] }

frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = { workspace = true }
vec1 = { version = "*", default-features = false, features = ["smallvec-v1"] }

ibc = { workspace = true, default-features = false }
ibc-primitives = { workspace = true, default-features = false, optional = false }
pallet-ibc = { workspace = true, default-features = false }

libsecp256k1 = { version = "0.7.0", default-features = false }

log = { workspace = true, default-features = false }

pallet-assets = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }
parity-wasm = { version = "0.45.0", default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false, features = [
	"alloc",
	"small_rng",
] }
scale-info = { default-features = false, version = "2.1.1", features = [
	"derive",
] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
sp-arithmetic = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
wasm-instrument = { workspace = true, default-features = false }
wasmi = { workspace = true, default-features = false }
wasmi-validation = { workspace = true, default-features = false }
composable-traits = { path = "../composable-traits", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"composable-support/std",
	"composable-traits/std",
	"cosmwasm-std/std",
	"cosmwasm-vm-wasmi/std",
	"cosmwasm-vm/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"ibc-primitives/std",
	"ibc/std",
	"libsecp256k1/std",
	"log/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-ibc/std",
	"parity-wasm/std",
	"primitives/std",
	"rand/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sha2/std",
	"sha3/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"vec1/std",
	"wasm-instrument/std",
	"wasmi-validation/std",
	"wasmi/std",
]
