[package]
name = "hp-account"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[dependencies]
array-bytes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
ripemd = { workspace = true, default-features = false }

parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Horizon
hp-crypto = { workspace = true, default-features = false }
hp-io = { workspace = true, default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"array-bytes",
	"hex",
	"ripemd/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-crypto/std",
	"hp-io/std",
	"serde/std",
]
