[package]
name = "hp-account"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

array-bytes = { workspace = true, optional = true }
hex = { workspace = true, default-features = false, optional = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
ripemd = { workspace = true, default-features = false }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Horizon
hp-crypto = { workspace = true, default-features = false }
hp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"array-bytes",
	"hex/std",
	"serde/std",
	"ripemd/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"hp-crypto/std",
	"hp-io/std",
]
